--- a/WebContent/error.html
+++ b/WebContent/error.html
@@ -31,7 +31,7 @@
             <h1>404</h1>
             <h2>Page not found</h2>
         </div>
-        <a href="/hostel">Homepage</a>
+        <a href="../">Homepage</a>
     </div>
 </div>
 
